Fix img overflow error

--- a/listings/static/listings/css/listings.css
+++ b/listings/static/listings/css/listings.css
@@ -39,6 +39,10 @@ select option[value="game-placeholder"] {
   color: red;
 }
 
+.listing-game-image {
+  max-height: 100%;
+}
+
 
 
 @media (min-width: 577px) {
